Added Judith to credits

--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -62,8 +62,9 @@
     <h1>Contributors</h1>
     <p>
         Bernhard Koschicek (DPP)<br />
-        Christof Rauchenberger<br />
+        Christof Rauchenberger (craws.net)<br />
         Johannes Preiser-Kapeller (MEDCON)<br />
+        Judith Pucher (digitallaut.at)<br />
         Katharina Winckler (DPP)<br />
         Mihailo Popović (DPP)<br />
         Petra Heinicker (MEDCON)<br />
