--- a/openatlas/templates/actor/index.html
+++ b/openatlas/templates/actor/index.html
@@ -5,9 +5,9 @@
 {% block content %}
     {% if 'editor'|is_authorized: %}
         <div class="button-bar">
-            <a href="{{ url_for('actor_insert', code='E21') }}">+ {{ 'E21'|get_class_name }}</a>
-            <a href="{{ url_for('actor_insert', code='E74') }}">+ {{ 'E74'|get_class_name }}</a>
-            <a href="{{ url_for('actor_insert', code='E40') }}">+ {{ 'E40'|get_class_name }}</a>
+            {% for code in config['CLASS_CODES']['actor']%}
+                <a href="{{ url_for('actor_insert', code=code) }}">+ {{ code|get_class_name }}</a>
+            {% endfor %}
         </div>
     {% endif %}
     {{ tables['actor']|pager|safe }}
