--- a/openatlas/templates/event/insert.html
+++ b/openatlas/templates/event/insert.html
@@ -1,6 +1,13 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
-    <a href="{{ url_for('event_index') }}">{{ _('event')|uc_first }}</a>
+    {% if origin %}
+        <a href="{{ url_for(config['CODE_CLASS'][origin.class_.code] + '_index') }}">
+            {{ _(config['CODE_CLASS'][origin.class_.code])|uc_first }}
+        </a>
+        > {{ origin|link|safe }}
+    {% else %}
+        <a href="{{ url_for('event_index') }}">{{ _('event')|uc_first }}</a>
+    {% endif %}
     > + {{ code|get_class_name }}
 {% endblock %}
 {% block content %}
