--- a/openatlas/templates/event/view.html
+++ b/openatlas/templates/event/view.html
@@ -7,6 +7,7 @@
 <div id="tabs" class="tabs-container">
     <ul>
         <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
+        <li><a href="#tab-source">{{ _('sources')|uc_first }} ({{ tables['source']['data']|length }})</a></li>
     </ul>
     <div id="tab-info">
         <div class="button-bar">
@@ -20,6 +21,15 @@
         <h1>{{ event.name }}</h1>
         {{ data['info']|data_table|safe }}
         {{ event|description|safe }}
+    </div>
+    <div id="tab-source">
+        {% if 'editor'|is_authorized: %}
+            <div class="button-bar">
+                <a href="{{ url_for('source_add', origin_id=event.id)}}">{{ _('add')|uc_first }}</a>
+                <a href="{{ url_for('source_insert', origin_id=event.id) }}">+ {{ _('source')|uc_first }}</a>
+            </div>
+        {% endif %}
+        {{ tables['source']|pager|safe }}
     </div>
 </div>
 {% endblock %}
