--- a/openatlas/templates/source/add.html
+++ b/openatlas/templates/source/add.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('source_index') }}">{{ _('source')|uc_first }}</a>
-    > {{ source|link|safe }}
-    > {{ _('add')|uc_first + ' ' + _(class_name)|uc_first }}
+    <a href="{{ url_for(config['CODE_CLASS'][origin.class_.code] + '_index') }}">
+        {{ _(config['CODE_CLASS'][origin.class_.code])|uc_first }}
+    </a>
+    > {{ origin|link|safe }}
+    > {{ _('add')|uc_first + ' ' + _('sources')|uc_first }}
 {% endblock %}
 {% block content %}
     {{ form|safe }}
