--- a/openatlas/templates/reference/index.html
+++ b/openatlas/templates/reference/index.html
@@ -5,15 +5,9 @@
 {% block content %}
     {% if 'editor'|is_authorized: %}
         <div class="button-bar">
-            <a href="{{ url_for('reference_insert', code='bibliography') }}">
-                + {{ _('bibliography')|uc_first }}
-            </a>
-            <a href="{{ url_for('reference_insert', code='edition') }}">
-                + {{ _('edition')|uc_first }}
-            </a>
-            <a href="{{ url_for('reference_insert', code='carrier') }}">
-                + {{ 'E84'|get_class_name }}
-            </a>
+            <a href="{{ url_for('reference_insert', code='bibliography') }}">+ {{ _('bibliography')|uc_first }}</a>
+            <a href="{{ url_for('reference_insert', code='edition') }}">+ {{ _('edition')|uc_first }}</a>
+            <a href="{{ url_for('reference_insert', code='carrier') }}">+ {{ 'E84'|get_class_name }}</a>
         </div>
     {% endif %}
     {{ tables['reference']|pager|safe }}
