--- a/openatlas/templates/event/view.html
+++ b/openatlas/templates/event/view.html
@@ -19,7 +19,7 @@
             {{ event.id|bookmark_toggle|safe }}
         </div>
         <h1>{{ event.name }}</h1>
-        {{ data['info']|data_table|safe }}
+        {{ tables['info']|data_table|safe }}
         {{ event|description|safe }}
     </div>
     <div id="tab-source">
