--- a/openatlas/templates/reference/view.html
+++ b/openatlas/templates/reference/view.html
@@ -6,24 +6,30 @@
 {% block content %}
 <div id="tabs" class="tabs-container">
     <ul>
-        <li>
-            <a href="#tab-info">{{ _('info')|uc_first }}</a>
-        </li>
+        <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
+        <li><a href="#tab-source">{{ _('sources')|uc_first }} ({{ tables['source']['data']|length }})</a></li>
     </ul>
     <div id="tab-info">
         <div class="button-bar">
             {{ reference|page_buttons|safe }}
             {% if 'editor'|is_authorized: %}
-                <a href="{{ url_for('reference_update', id_=reference.id) }}">
-                    {{ _('edit')|uc_first }}
-                </a>
+                <a href="{{ url_for('reference_update', id_=reference.id) }}">{{ _('edit')|uc_first }}</a>
                 {{ delete_link|safe }}
             {% endif %}
             {{ reference.id|bookmark_toggle|safe }}
         </div>
         <h1>{{ reference.name }}</h1>
-        {{ data['info']|data_table|safe }}
+        {{ tables['info']|data_table|safe }}
         {{ reference|description|safe }}
+    </div>
+    <div id="tab-source">
+        {% if 'editor'|is_authorized: %}
+            <div class="button-bar">
+                <a href="{{ url_for('reference_add2', reference_id=reference.id)}}">{{ _('add')|uc_first }}</a>
+                <a href="{{ url_for('source_insert', origin_id=reference.id) }}">+ {{ _('source')|uc_first }}</a>
+            </div>
+        {% endif %}
+        {{ tables['source']|pager|safe }}
     </div>
 </div>
 {% endblock %}
