--- a/openatlas/templates/reference/view.html
+++ b/openatlas/templates/reference/view.html
@@ -8,6 +8,9 @@
     <ul>
         <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
         <li><a href="#tab-source">{{ _('sources')|uc_first }} ({{ tables['source']['data']|length }})</a></li>
+        <li><a href="#tab-event">{{ _('events')|uc_first }} ({{ tables['event']['data']|length }})</a></li>
+        <li><a href="#tab-actor">{{ _('actors')|uc_first }} ({{ tables['actor']['data']|length }})</a></li>
+        <li><a href="#tab-place">{{ _('places')|uc_first }} ({{ tables['place']['data']|length }})</a></li>
     </ul>
     <div id="tab-info">
         <div class="button-bar">
@@ -22,14 +25,24 @@
         {{ tables['info']|data_table|safe }}
         {{ reference|description|safe }}
     </div>
-    <div id="tab-source">
-        {% if 'editor'|is_authorized: %}
-            <div class="button-bar">
-                <a href="{{ url_for('reference_add2', reference_id=reference.id)}}">{{ _('add')|uc_first }}</a>
-                <a href="{{ url_for('source_insert', origin_id=reference.id) }}">+ {{ _('source')|uc_first }}</a>
-            </div>
-        {% endif %}
-        {{ tables['source']|pager|safe }}
-    </div>
+    {% for name in ['source', 'event', 'actor', 'place']: %}
+        <div id="tab-{{name}}">
+            {% if 'editor'|is_authorized: %}
+                <div class="button-bar">
+                    <a href="{{ url_for('reference_add2', reference_id=reference.id)}}">{{ _('add')|uc_first }}</a>
+                    {% if name == 'place' %}
+                        <a href="{{ url_for('place_insert', origin_id=reference.id) }}">+ {{ _('place')|uc_first }}</a>
+                    {% elif name == 'source' %}
+                        <a href="{{ url_for('source_insert', origin_id=reference.id) }}">+ {{ _('source')|uc_first }}</a>
+                    {% else %}
+                        {% for code in config['CLASS_CODES'][name]%}
+                            <a href="{{ url_for(name + '_insert', code=code, origin_id=reference.id) }}">+ {{ code|get_class_name }}</a>
+                        {% endfor %}
+                    {% endif %}
+                </div>
+            {% endif %}
+            {{ tables[name]|pager|safe }}
+        </div>
+    {% endfor %}
 </div>
 {% endblock %}
