Refactored entity list tables with a generic function

--- a/openatlas/templates/actor/index.html
+++ b/openatlas/templates/actor/index.html
@@ -10,5 +10,5 @@
             {% endfor %}
         </div>
     {% endif %}
-    {{ tables['actor']|pager|safe }}
+    {{ table|pager|safe }}
 {% endblock %}
