--- a/openatlas/templates/event/index.html
+++ b/openatlas/templates/event/index.html
@@ -10,5 +10,5 @@
             {% endfor %}
         </div>
     {% endif %}
-    {{ tables['event']|pager|safe }}
+    {{ table|pager|safe }}
 {% endblock %}
