--- a/openatlas/templates/reference/index.html
+++ b/openatlas/templates/reference/index.html
@@ -10,5 +10,5 @@
             <a href="{{ url_for('reference_insert', code='carrier') }}">+ {{ 'E84'|get_class_name }}</a>
         </div>
     {% endif %}
-    {{ tables['reference']|pager|safe }}
+    {{ table|pager|safe }}
 {% endblock %}
