Reference linking and multiple bugfixes

--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -8,8 +8,8 @@ html, body, input, select, textarea {
     display: none;
 }
 
-.tooltip {
-    z-index:-1;
+.overlay {
+    z-index: 1;
 }
 
 .jstree li > a > .jstree-icon {
