--- a/openatlas/templates/source/view.html
+++ b/openatlas/templates/source/view.html
@@ -7,10 +7,10 @@
 <div id="tabs" class="tabs-container">
     <ul>
         <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
-        <li><a href="#tab-event">{{ _('events')|uc_first }} ({{ tables['event']['data']|length }})</a></li>
-        <li><a href="#tab-actor">{{ _('actors')|uc_first }} ({{ tables['actor']['data']|length }})</a></li>
-        <li><a href="#tab-place">{{ _('places')|uc_first }} ({{ tables['place']['data']|length }})</a></li>
-        <li><a href="#tab-reference">{{ _('references')|uc_first }} ({{ tables['reference']['data']|length }})</a></li>
+        <li><a href="#tab-event">{{ _('event')|uc_first }} ({{ tables['event']['data']|length }})</a></li>
+        <li><a href="#tab-actor">{{ _('actor')|uc_first }} ({{ tables['actor']['data']|length }})</a></li>
+        <li><a href="#tab-place">{{ _('place')|uc_first }} ({{ tables['place']['data']|length }})</a></li>
+        <li><a href="#tab-reference">{{ _('reference')|uc_first }} ({{ tables['reference']['data']|length }})</a></li>
         <li><a href="#tab-translations">{{ _('translations')|uc_first }} ({{ tables['translation']['data']|length }})</a></li>
     </ul>
     <div id="tab-info">
