--- a/openatlas/templates/source/add.html
+++ b/openatlas/templates/source/add.html
@@ -4,7 +4,7 @@
         {{ _(config['CODE_CLASS'][origin.class_.code])|uc_first }}
     </a>
     > {{ origin|link|safe }}
-    > {{ _('add')|uc_first + ' ' + _('sources')|uc_first }}
+    > {{ _('add')|uc_first + ' ' + _('source')|uc_first }}
 {% endblock %}
 {% block content %}
     {{ form|safe }}
