--- a/openatlas/templates/involvement/update.html
+++ b/openatlas/templates/involvement/update.html
@@ -1,11 +1,10 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
-    <a href="{{ url_for(config['CODE_CLASS'][origin.class_.code] + '_index') }}">
-        {{ _(config['CODE_CLASS'][origin.class_.code])|uc_first }}
-    </a>
+    <a href="{{ url_for(config['CODE_CLASS'][origin.class_.code] + '_index') }}">{{ _(config['CODE_CLASS'][origin.class_.code])|uc_first }}</a>
     > {{ origin|link|safe }}
-    > + {{ _involvement }}
+    > {{ linked_object|link|safe }}
+    > {{ _('edit')|uc_first }}
 {% endblock %}
 {% block content %}
-    form|display_form|safe
+    {{ form|display_form|safe }}
 {% endblock %}
