--- a/openatlas/templates/event/view.html
+++ b/openatlas/templates/event/view.html
@@ -37,6 +37,9 @@
         {% if 'editor'|is_authorized: %}
             <div class="button-bar">
                 <a href="{{ url_for('involvement_insert', origin_id=event.id)}}">{{ _('add')|uc_first }}</a>
+                {% for code in config['CLASS_CODES']['actor']%}
+                    <a href="{{ url_for('actor_insert', code=code, origin_id=event.id) }}">+ {{ code|get_class_name }}</a>
+                {% endfor %}
             </div>
         {% endif %}
         {{ tables['actor']|pager|safe }}
