Refactored build delete link

--- a/openatlas/templates/actor/view.html
+++ b/openatlas/templates/actor/view.html
@@ -15,7 +15,7 @@
             {{ actor|page_buttons|safe }}
             {% if 'editor'|is_authorized: %}
                 <a href="{{ url_for('actor_update', id_=actor.id) }}">{{ _('edit')|uc_first }}</a>
-                {{ delete_link|safe }}
+                {{ actor|build_delete_link|safe }}
             {% endif %}
             {{ actor.id|bookmark_toggle|safe }}
         </div>
