--- a/openatlas/templates/event/view.html
+++ b/openatlas/templates/event/view.html
@@ -19,7 +19,7 @@
             {{ event|page_buttons|safe }}
             {% if 'editor'|is_authorized: %}
                 <a href="{{ url_for('event_update', id_=event.id) }}">{{ _('edit')|uc_first }}</a>
-                {{ delete_link|safe }}
+                {{ event|build_delete_link|safe }}
             {% endif %}
             {{ event.id|bookmark_toggle|safe }}
         </div>
@@ -48,7 +48,7 @@
         {% if 'editor'|is_authorized: %}
             <div class="button-bar">
                 <a href="{{ url_for('involvement_insert', origin_id=event.id)}}">{{ _('add')|uc_first }}</a>
-                {% for code in config['CLASS_CODES']['actor']%}
+                {% for code in config['CLASS_CODES']['actor'] %}
                     <a href="{{ url_for('actor_insert', code=code, origin_id=event.id) }}">+ {{ code|get_class_name }}</a>
                 {% endfor %}
             </div>
