--- a/openatlas/templates/event/view.html
+++ b/openatlas/templates/event/view.html
@@ -25,7 +25,10 @@
         </div>
         <h1>{{ event.name }}</h1>
         {% if super_event %}
-            {{ _('sub event of')|uc_first }}: {{ super_event|link|safe }}
+            {{ _('sub event of')|uc_first }}: {{ super_event|link|safe }}<br />
+        {% endif %}
+        {% if place %}
+            {{ _('place')|uc_first }}: {{ place|link|safe }}<br />
         {% endif %}
         {{ tables['info']|data_table|safe }}
         {{ event|description|safe }}
