New images for 404 and 403

--- a/openatlas/templates/403.html
+++ b/openatlas/templates/403.html
@@ -8,10 +8,7 @@
         403 - Forbidden
     </p>
     <p>
-        <img src="/images/layout/403.jpg" alt="" width="400" height="247"/>
-    </p>
-    <p>
-        WRONG PARTY ... AGAIN
+        <img src="/images/layout/403.jpg" alt="403 - Forbidden" width="500" />
     </p>
     <p>
         It seems you are not welcomed here.
