--- a/openatlas/templates/404.html
+++ b/openatlas/templates/404.html
@@ -7,7 +7,7 @@
 	<p style="font-size:18px;">
         404 - File not found
     </p>
-	<img src="/images/layout/404.jpg" alt="404" />
+	<img src="/images/layout/404.jpg" alt="404 - File not found" />
     <p>
         We are so sorry!
     </p>
