--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -8,15 +8,19 @@
     <ul>
         <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
         <li><a href="#tab-source">{{ _('source')|uc_first }} ({{ tables['source']['data']|length }})</a></li>
+        {% if tables['event']['data']|length > 0 %}
+            <li><a href="#tab-event">{{ _('event')|uc_first }} ({{ tables['event']['data']|length }})</a></li>
+        {% endif %}
+        {% if tables['actor']['data']|length > 0 %}
+            <li><a href="#tab-actor">{{ _('actor')|uc_first }} ({{ tables['actor']['data']|length }})</a></li>
+        {% endif %}
         <li><a href="#tab-reference">{{ _('reference')|uc_first }} ({{ tables['reference']['data']|length }})</a></li>
     </ul>
     <div id="tab-info">
         <div class="button-bar">
             {{ object_|page_buttons|safe }}
             {% if 'editor'|is_authorized: %}
-                <a href="{{ url_for('place_update', id_=object_.id) }}">
-                    {{ _('edit')|uc_first }}
-                </a>
+                <a href="{{ url_for('place_update', id_=object_.id) }}">{{ _('edit')|uc_first }}</a>
                 {{ object_|build_delete_link|safe }}
             {% endif %}
             {{ object_.id|bookmark_toggle|safe }}
@@ -34,6 +38,16 @@
         {% endif %}
         {{ tables['source']|pager|safe }}
     </div>
+    {% if tables['event']['data']|length > 0 %}
+        <div id="tab-event">
+            {{ tables['event']|pager|safe }}
+        </div>
+    {% endif %}
+    {% if tables['actor']['data']|length > 0 %}
+        <div id="tab-actor">
+            {{ tables['actor']|pager|safe }}
+        </div>
+    {% endif %}
     <div id="tab-reference">
         {% if 'editor'|is_authorized: %}
             <div class="button-bar">
