Actor links continued

--- a/openatlas/templates/actor/view.html
+++ b/openatlas/templates/actor/view.html
@@ -8,6 +8,7 @@
     <ul>
         <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
         <li><a href="#tab-source">{{ _('source')|uc_first }} ({{ tables['source']['data']|length }})</a></li>
+        <li><a href="#tab-event">{{ _('event')|uc_first }} ({{ tables['event']['data']|length }})</a></li>
         <li><a href="#tab-reference">{{ _('reference')|uc_first }} ({{ tables['reference']['data']|length }})</a></li>
     </ul>
     <div id="tab-info">
@@ -31,6 +32,17 @@
             </div>
         {% endif %}
         {{ tables['source']|pager|safe }}
+    </div>
+    <div id="tab-event">
+        {% if 'editor'|is_authorized: %}
+            <div class="button-bar">
+                <a href="{{ url_for('involvement_insert', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
+                {% for code in config['CLASS_CODES']['event'] %}
+                    <a href="{{ url_for('event_insert', code=code, origin_id=actor.id) }}">+ {{ code|get_class_name }}</a>
+                {% endfor %}
+            </div>
+        {% endif %}
+        {{ tables['event']|pager|safe }}
     </div>
     <div id="tab-reference">
         {% if 'editor'|is_authorized: %}
