--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -24,25 +24,17 @@
         <script src="/js/jquery/jstree-3.3.4/jstree.min.js"></script>
         <script src="/js/jquery/jstree-3.3.4/jstree.search.js"></script>
         <script src="/js/tinymce/tinymce.min.js"></script>
+        <script>
+            minimumPasswordLength = {{ session['settings']['minimum_password_length'] }};
+            show = '{{ _('show')|uc_first }}';
+            hide = '{{ _('hide')|uc_first }}';
+        </script>
         <script src="/js/functions.js"></script>
         <script src="/js/forms.js"></script>
         {% set js_translation_file = '/js/messages_' + session['language'] + '.js' %}
         {% if js_translation_file|test_file %}
             <script src="{{ js_translation_file }}"></script>
         {% endif %}
-        <script type="text/javascript">
-            minimumPasswordLength = {{ session['settings']['minimum_password_length'] }};
-                $(document).ready(function () {
-                    show = '{{ _('show')|uc_first }}';
-                    hide = '{{ _('hide')|uc_first }}';
-                    $("#date-switcher").click(function () {
-                        $(".date-switch").toggleClass('display-none');
-                        $(this).text(function(i, text){
-                            return text === show ? hide : show;
-                        })
-                    });
-                });
-        </script>
         <title>
             {{ session['settings']['site_name'] }}
             {{ ' - ' + request.path.split('/')[1]|uc_first if request.path.split('/')[1] else '' }}
@@ -53,19 +45,13 @@
             <div id="logo"><a href="/"></a></div>
             <div id="site-name">
                 {{ session['settings']['site_name'] }}
-                {% if 'local' in request['url_root'] %}
-                    local
-                {% endif %}
-                <noscript>
-                    <div class="error">{{ _('warning no js') }}</div>
-                </noscript>
+                {% if 'local' in request['url_root'] %}local{% endif %}
+                <noscript><div class="error">{{ _('warning no js') }}</div></noscript>
                 <br /><br />
                 {% with messages = get_flashed_messages(with_categories=true) %}
                     {% if messages %}
                         {% for category, message in messages %}
-                            <div class="message {{ category }}">
-                                {{ message|uc_first }}
-                            </div>
+                            <div class="message {{ category }}">{{ message|uc_first }}</div>
                         {% endfor %}
                     {% endif %}
                 {% endwith %}
@@ -86,10 +72,8 @@
                     <div style="clear:both;"></div>
                 {% endif %}
                 <div id="language-menu">
-                    <img class="zoom" src="/images/icons/zoom-in.png" title="{{ _('zoom in') }}"
-                        onclick="resizeText(1)" alt="{{ _('zoom in') }}" />
-                    <img class="zoom" src="/images/icons/zoom-out.png" title="{{ _('zoom out') }}"
-                        onclick="resizeText(-1)" alt="{{ _('zoom out') }}" />
+                    <img class="zoom" src="/images/icons/zoom-in.png" title="{{ _('zoom in') }}" onclick="resizeText(1)" alt="{{ _('zoom in') }}" />
+                    <img class="zoom" src="/images/icons/zoom-out.png" title="{{ _('zoom out') }}" onclick="resizeText(-1)" alt="{{ _('zoom out') }}" />
                     {% for language in config['LANGUAGES'].keys()|sort: %}
                         {% if 'language' in session and session['language'] == language: %}
                             <span>{{ language|upper }}</span>
@@ -106,20 +90,7 @@
             </div>
         </div>
         <div id="menu">
-            {% if current_user.is_authenticated %}
-                {% for item in ['overview', 'source', 'event', 'actor', 'place', 'reference', 'types'] %}
-                    {% set css = 'active' if request.path.startswith('/' + item) or (item == 'overview' and request.path == '/') %}
-                    <div class="{{ css|safe }}">
-                        <a href="/{{ item }}">{{ _(item)|uc_first }}</a>
-                    </div>
-                {% endfor %}
-                {% if 'manager'|is_authorized %}
-                    {% set css = 'active' if 'admin' in request.path %}
-                    <div class="{{ css|safe }}">
-                        <a href="/admin">{{ _('admin')|uc_first }}</a>
-                    </div>
-                {% endif %}
-            {% endif %}
+            {{ origin|display_menu|safe }}
         </div>
         <div id="breadcrumb">
             {% block breadcrumb %}{% endblock %}
@@ -129,28 +100,7 @@
             {% if session['settings']['debug_mode'] and 'admin'|is_authorized %}
                 <div class="data-table" style="float:right;margin:1em;">
                     <p>Debug</p>
-                    {% for name, value in debug_model.items() %}
-                        {% if name in ['by codes', 'by id', 'by ids', 'linked', 'user'] %}
-                            <div>
-                                <div>{{ name }}</div>
-                                <div class="table-cell" style="text-align:right;">
-                                    {{ value }}
-                                </div>
-                            </div>
-                        {% elif name not in ['current'] %}
-                            <div>
-                                <div>{{ name }}</div>
-                                <div class="table-cell" style="text-align:right;">
-                                    {{ '%0.2f'|format(value) }}
-                                </div>
-                            </div>
-                        {% endif %}
-                    {% endfor %}
-                    {% if form and form.errors %}
-                        {% for fieldName, errorMessages in form.errors.items(): %}
-                            {{ fieldName }} - {{ errorMessages[0] }}<br />
-                        {% endfor %}
-                    {% endif %}
+                    {{ debug_model|display_debug_info(form)|safe }}
                 </div>
             {% endif %}
             {% if 'craws.net' in request['url_root'] %}
