--- a/openatlas/templates/actor/view.html
+++ b/openatlas/templates/actor/view.html
@@ -10,6 +10,10 @@
         <li><a href="#tab-source">{{ _('source')|uc_first }} ({{ tables['source']['data']|length }})</a></li>
         <li><a href="#tab-event">{{ _('event')|uc_first }} ({{ tables['event']['data']|length }})</a></li>
         <li><a href="#tab-relation">{{ _('relation')|uc_first }} ({{ tables['relation']['data']|length }})</a></li>
+        <li><a href="#tab-member-of">{{ _('member of')|uc_first }} ({{ tables['member_of']['data']|length }})</a></li>
+        {% if tables['member'] %}
+            <li><a href="#tab-member">{{ _('member')|uc_first }} ({{ tables['member']['data']|length }})</a></li>
+        {% endif %}
         <li><a href="#tab-reference">{{ _('reference')|uc_first }} ({{ tables['reference']['data']|length }})</a></li>
     </ul>
     <div id="tab-info">
@@ -56,6 +60,24 @@
         {% endif %}
         {{ tables['relation']|pager|safe }}
     </div>
+    <div id="tab-member-of">
+        {% if 'editor'|is_authorized: %}
+            <div class="button-bar">
+                <a href="{{ url_for('membership_insert', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
+            </div>
+        {% endif %}
+        {{ tables['member_of']|pager|safe }}
+    </div>
+    {% if tables['member'] %}
+        <div id="tab-member">
+            {% if 'editor'|is_authorized: %}
+                <div class="button-bar">
+                    <a href="{{ url_for('member_insert', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
+                </div>
+            {% endif %}
+            {{ tables['member']|pager|safe }}
+        </div>
+    {% endif %}
     <div id="tab-reference">
         {% if 'editor'|is_authorized: %}
             <div class="button-bar">
