--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -28,6 +28,8 @@
             minimumPasswordLength = {{ session['settings']['minimum_password_length'] }};
             show = '{{ _('show')|uc_first }}';
             hide = '{{ _('hide')|uc_first }}';
+            moreText = '{{ _('show more')|uc_first }}';
+            lessText = '{{ _('show less')|uc_first }}';
         </script>
         <script src="/js/functions.js"></script>
         <script src="/js/forms.js"></script>
