--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -8,6 +8,11 @@ html, body, input, select, textarea {
     display: none;
 }
 
+div.pager {
+    float: left;
+    margin: 0.1em 0.5em 0 0;
+}
+
 .complete {
     display:none;
 }
