--- a/openatlas/templates/place/insert.html
+++ b/openatlas/templates/place/insert.html
@@ -11,5 +11,12 @@
     > + {{ _('place')|uc_first }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form|safe }}
+    <div id='map-info-display' style="float:left;">
+        {{ form|display_form|safe }}
+    </div>
+    <div id="map" class="map"></div>
+    <script type="text/javascript" src="/js/leaflet/map.js"></script>
+    <script src="/js/leaflet/draw/leaflet.draw.js" type="text/javascript"></script>
+    <script src="/js/leaflet/shapedraw.js" type="text/javascript"></script>
+    <script src="/js/leaflet/draw/edithandler.js" type="text/javascript"></script>
 {% endblock %}
