--- a/openatlas/templates/actor/view.html
+++ b/openatlas/templates/actor/view.html
@@ -15,6 +15,9 @@
             <li><a href="#tab-member">{{ _('member')|uc_first }} ({{ tables['member']['data']|length }})</a></li>
         {% endif %}
         <li><a href="#tab-reference">{{ _('reference')|uc_first }} ({{ tables['reference']['data']|length }})</a></li>
+        {% if gis_data %}
+            <li><a href="#tab-map" id="link3">{{ _('map')|uc_first }}</a></li>
+        {% endif %}
     </ul>
     <div id="tab-info">
         <div class="button-bar">
@@ -89,5 +92,17 @@
         {% endif %}
         {{ tables['reference']|pager|safe }}
     </div>
+    {% if gis_data %}
+        <div id="tab-map">
+            <div id="map" class="map" style="float:none;margin:0;width:70em;"></div>
+        </div>
+        <script src="/js/leaflet/map.js"></script>
+        <script>
+            // workaround for leaflet bug when map not in the first tab
+            $("body").on('click','#link3', function() {
+                map.panBy(new L.Point(0, -150));
+            });
+        </script>
+    {% endif %}
 </div>
 {% endblock %}
