--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -7,7 +7,7 @@
     <h1>Team</h1>
     <p>
         <strong>Stefan Eichert</strong><br />
-        Idea and Concept, CIDOC CRM Adaptions and Mappings, Map and Leaflet Implementation
+        Idea and Concept, CIDOC CRM Adaptions and Mappings
     </p>
     <p>
         <strong>Alexander Watzinger</strong>
@@ -64,7 +64,7 @@
         Bernhard Koschicek (DPP)<br />
         Christof Rauchenberger (craws.net)<br />
         Johannes Preiser-Kapeller (MEDCON)<br />
-        Judith Pucher (digitallaut.at)<br />
+        Judith Pucher (Digital Laut)<br />
         Katharina Winckler (DPP)<br />
         Mihailo Popović (DPP)<br />
         Petra Heinicker (MEDCON)<br />
