--- a/openatlas/static/js/leaflet/shapeedit.css
+++ b/openatlas/static/js/leaflet/shapeedit.css
@@ -1,36 +1,27 @@
-
-
-
-#selectunit
-{
-    position: absolute; 
-    display: none; 
-    right:0; 
-    margin-top: 20px; 
-    background: #ffffff; 
-    padding: 5px; 
-    margin: 8px; 
+#selectunit {
+    position: absolute;
+    display: none;
+    right:0;
+    margin-top: 20px;
+    background: #ffffff;
+    padding: 5px;
+    margin: 8px;
     border-radius: 6px;
-    }
-
-
-
-#jstree
-{
-display: block; 
-border: 1px solid #ccc;
-border-radius: 2px;
 }
 
-#demo_q
-{
+#jstree {
+    display: block;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+}
+
+#demo_q {
     margin-bottom: 8px;
     border: 1px solid #ccc;
     border-radius: 2px;
 }
 
-.shapeinput
-{
+.shapeinput {
     padding: 6px 8px;
     background: white;
     background: rgba(255,255,255,1);
@@ -38,116 +29,97 @@ border-radius: 2px;
     border-radius: 5px;
 }
 
-
-#shapeform
-{
+#shapeform {
     width: 300px;
     overflow: hidden;
 }
 
-#headingtext, #headingtextadm
-{
-font-weight: bold;  
-font-style: normal;
+#headingtext, #headingtextadm {
+    font-weight: bold;
+    font-style: normal;
 }
 
-#shapeform input, select
-{
+#shapeform input, select {
     width: 200px;
     float: right;
     margin-left: 15px;
     display: none;
 }
 
-
-#namefield input, select
-{
-    
+#namefield input, select {
     width: 96%;
     display: block;
 }
 
-#shapeform textarea
-{
+#shapeform textarea {
     font: 10pt "Helvetica Neue", Arial, Helvetica, sans-serif;
     float: right;
-    width: 98%;
+    width: 96%;
     resize:vertical
 }
 
- 
-#shapeform label
-{
+#shapeform label {
     float: left;
     margin-top: 3px;
     padding-top: 5px
 }
 
-#shapeform span 
-{
+#shapeform span {
     display: block;
     overflow: hidden;
     padding-top: 5px;
 }
 
-#resetbtn
-{
+#resetbtn {
     margin-top: 7px;
     margin-right: 7px;
     float: right;
     display: none
 }
 
-
-#editclosebtn
-{
+#editclosebtn {
     color: #ccc;
     cursor: pointer;
     float: right;
     display: none
 }
 
-#markerclosebtn
-{
+#markerclosebtn {
     color: #ccc;
     cursor: pointer;
     float: right;
     display: none
 }
 
-#closebtn
-{
+#closebtn {
     color: #ccc;
     cursor: pointer;
     float: right
 }
 
-
-#saveadmbtn
-{
+#saveadmbtn {
     margin-top: 7px;
     margin-right: 7px;
     float: right;
     display: block
 }
 
-#editresetbtn, #savebtn, #editsavebtn, #markersavebtn 
-{
+#editresetbtn, #savebtn, #editsavebtn, #markersavebtn {
     margin-top: 7px;
     margin-right: 7px;
     float: right;
     display: none
 }
 
-#popup
-{
-    width: 120px   
+#popup {
+    width: 120px
 }
 
-#popup input
-{
+#popup input {
     width: 50px;
     margin: 3px
 }
 
-.jstree li > a > .jstree-icon {  display:none !important; }
+.jstree li > a > .jstree-icon {
+    display:none !important;
+}
