--- a/openatlas/templates/admin/orphans.html
+++ b/openatlas/templates/admin/orphans.html
@@ -4,20 +4,26 @@
     > {{ _('orphans')|uc_first }}
 {% endblock %}
 {% block content %}
-    <h1>{{ _('orphans')|uc_first }}</h1>
-    {% if tables['orphans']['data']|length > 0 %}
-        <div class="button-bar">
-            <a onclick="return confirm('{{_('delete orphans')|uc_first }}?')"
-               href="{{ url_for('admin_orphans', delete='orphans') }}">{{ _('delete orphans')|uc_first }}</a>
-        </div>
-    {% endif %}
-    {{ tables['orphans']|pager|safe }}
-    <h1>{{ _('unlinked')|uc_first }}</h1>
-    {% if tables['unlinked']['data']|length > 0 %}
-        <div class="button-bar">
-            <a onclick="return confirm('{{_('delete unlinked')|uc_first }}?')"
-               href="{{ url_for('admin_orphans', delete='unlinked') }}">{{ _('delete unlinked')|uc_first }}</a>
-        </div>
-    {% endif %}
-    {{ tables['unlinked']|pager|safe }}
+<div id="tabs" class="tabs-container">
+    <ul>
+        <li><a href="#tab-orphan">{{ _('orphan')|uc_first }} ({{ tables['orphans']['data']|length }})</a></li>
+        <li><a href="#tab-unlinked">{{ _('unlinked')|uc_first }} ({{ tables['unlinked']['data']|length }})</a></li>
+        <li><a href="#tab-nodes">{{ _('type')|uc_first }} ({{ tables['nodes']['data']|length }})</a></li>
+    </ul>
+    <div id="tab-orphan">
+        {% if tables['orphans']['data']|length > 0 %}
+            <div class="button-bar">
+                <a onclick="return confirm('{{_('delete orphans')|uc_first }}?')"
+                   href="{{ url_for('admin_orphans', delete='orphans') }}">{{ _('delete orphans')|uc_first }}</a>
+            </div>
+        {% endif %}
+        {{ tables['orphans']|pager|safe }}
+    </div>
+    <div id="tab-unlinked">
+        {{ tables['unlinked']|pager|safe }}
+    </div>
+    <div id="tab-nodes">
+        {{ tables['nodes']|pager|safe }}
+    </div>
+</div>
 {% endblock %}
