--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -8,7 +8,7 @@
     <ul>
         <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
         {% if gis_data %}
-            <li><a href="#tab-map" id="link3">{{ _('map')|uc_first }}</a></li>
+            <li><a href="#tab-map" id="map-tab-id">{{ _('map')|uc_first }}</a></li>
         {% endif %}
         <li><a href="#tab-source">{{ _('source')|uc_first }} ({{ tables['source']['data']|length }})</a></li>
         {% if tables['event']['data']|length > 0 %}
@@ -37,10 +37,12 @@
             <div id="map" class="map" style="float:none;margin:0;width:70em;"></div>
         </div>
         <script src="/js/leaflet/map.js"></script>
-        // workaround for leaflet bug when map not in the first tab
-        $("body").on('click','#link3', function() {
-            map.panBy(new L.Point(0, -150));
-        });
+        <script>
+            /* workaround for leaflet bug when map not in the first tab */
+            $("body").on('click','#map-tab-id', function() {
+                map.panBy(new L.Point(0, -1));
+            });
+        </script>
     {% endif %}
     <div id="tab-source">
         {% if 'editor'|is_authorized: %}
