--- a/openatlas/templates/actor/update.html
+++ b/openatlas/templates/actor/update.html
@@ -5,5 +5,8 @@
     > {{ _('edit')|uc_first }}
 {% endblock %}
 {% block content %}
+    {% if modified %}
+        <a class="button" href="{{ url_for('actor_update', id_=actor.id) }}">{{ _('reload'|uc_first) }}</a>
+    {% endif %}
     {{ form|display_form('', True if actor.class_.code=='E21' else False)|safe }}
 {% endblock %}
